--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
     body {
     font-family: "Lato", sans-serif;
+     overflow-y:hidden;
     }
 
     .sidenav {
@@ -63,7 +64,7 @@
          <tr>
              <td>
                 <div class="sidenav">
-                    <div><img src="C:\Users\hp\Pictures\Screenshots\examination form\IMG-20201121-WA0002 (2).jpg" alt=""></div>   
+                    <div><img src="20170519_224038.jpg" alt=""></div>   
                     <p><h2 class="name">Mounil Garg</h2>
                         <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(BE- Computer Science Engineering)</i></p> 
                     <div>
