--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
     body {
     font-family: "Lato", sans-serif;
-     overflow-y:hidden;
+     overflow-x:hidden;
     }
 
     .sidenav {
@@ -168,9 +168,9 @@
                             <td valign="top">
                                 <div class="one" style="width: 95%;">Extracurricular Activities:</div>
                                 <ul>
-                                    <li>Various POEMS published in "Times Of India" newspaper.</li>
+                                    <li>Various POEMS published in "Times Of India" <br> newspaper.</li>
                                     <li>District-level Basketball player</li>
-                                    <li>Won various inter-house debating, extempore competitions</li>
+                                    <li>Won various inter-house debating, extempore <br> competitions</li>
                                     <li>Participated in various inter-school poetry writing <br> competitions</li>
                                 </ul>
                                 <div class="three" >Awards/Scholarships:</div>
