--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <style>
     body {
     font-family: "Lato", sans-serif;
-     overflow-x:hidden;
+    overflow-x: hidden;
+    
     }
 
     .sidenav {
-    height: 100%;
-    width: 25%;
+    height: 100vh;
+    width: 28%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -24,10 +25,10 @@
 
      img{
         align-self: center;
-        padding-top:5px;
-        padding-left: 90px;
-        width: 50%;
-        height: 200px;
+        top:-55px;
+        padding-left: 140px;
+        width: 35%;
+        height: 160px;
     }
 
     .main {
@@ -40,6 +41,7 @@
 
     .name{
         padding-left: 110px;
+        padding-top: -10px;
     }
     .one{
         background-color: lightgray;
@@ -64,25 +66,27 @@
          <tr>
              <td>
                 <div class="sidenav">
-                    <div><img src="20170519_224038.jpg" alt=""></div>   
-                    <p><h2 class="name">Mounil Garg</h2>
-                        <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(BE- Computer Science Engineering)</i></p> 
-                    <div>
+                    <img src="C:\Users\hp\Pictures\Me and mine\20170519_224038.jpg" alt="">  
+                    <h2 class="name">&nbsp;&nbsp;&nbsp;&nbsp;Mounil Garg</h2>
+                        <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(BE- Computer Science Engineering)</i> <br> 
+                    <div >
                         <ul>
                             <li><u>Gender</u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Female</li><br>
                             <li><u>DOB</u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; :03.04.2001</li><br>
                             <li><u>Nationality</u>:Indian</li><br>
                             <li><u>Category</u>&nbsp;&nbsp;:General</li><br>
+                            <li><u>Languages</u>&nbsp;&nbsp;:English , Hindi, Punjabi, French</li><br>
+                            <li><u>Hobbies</u>&nbsp;&nbsp;:Poetry writing, Singing, Doodling</li><br>
                         </ul>
                     </div>
                     <hr>
-                    <div>
-                        <h3 class="name">Contact</h3>
+                    <div >
+                        <h3 class="name">&nbsp;&nbsp;&nbsp;&nbsp;Contact</h3>
                         <ul>
                             <li><u>Email</u>&nbsp;&nbsp;&nbsp;&nbsp;: mounilgarg@gmail.com</li><br>
-                            <li><u>Mobile</u>&nbsp;&nbsp;&nbsp;: 9350197805</li><br>
                             <li><u>Github</u>&nbsp;&nbsp;&nbsp;: https://github.com/mounilgarg </li><br>
                             <li><u>LinkedIn</u>: https://www.linkedin.com/in/mounil-garg-0161b5210/</li><br>
+                            <li><u>Blog</u>&nbsp;&nbsp;&nbsp;: https://thepistle.blogspot.com/ </li><br>
                         </ul>
                     </div>
                 </div>
@@ -119,11 +123,17 @@
                     <table>
                         <tr>
                             <td>
-                                <div class="one" >Experience:</div>
+                                <div class="one" >Experience:(Internships)</div>
+                                <p>1)&nbsp;<b>Organisation</b>:The Sparks Foundation </p>
                                 <ul>
                                     <li><b>Position</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Web Development Intern </li>
-                                    <li><b>Organisation</b>:The Sparks Foundation </li>
                                     <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Basic Banking System </li>
+                                    <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - May'21(1 mon)</li>
+                                </ul>
+                                <p>2)&nbsp;<b>Organisation</b>:Influencer Saga </p>
+                                <ul>
+                                    <li><b>Position</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Front end Development Intern </li>
+                                    <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:DockChip(website) </li>
                                     <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - present</li>
                                 </ul>
                                 <div class="one" >Courses/Certifications:</div>
@@ -139,31 +149,7 @@
                                     <li><b>Other software</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MS Word, PowerPoint</li>
                                     <li><b>Familiar with</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MySQL, Oracle, PHP</li>
                                     <li><b>Currently learning</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:JavaScript, Visual Studio Code</li>
-                                </ul>
-                                <table cellpadding="10">
-                                    <tr >
-                                        <div style="column-gap: 40px;">
-                                            <td >
-                                                <div class="one" style="width: 200%;">Languages:</div>
-                                                <ul>
-                                                    <li>English</li>
-                                                    <li>Hindi</li>
-                                                    <li>Punjabi</li>
-                                                    <li>French</li>
-                                                </ul>
-                                            </td>
-                                            <td style="padding: 0 105px;">
-                                                <div class="three" style="width: 180%;margin-top: -19px;" >Hobbies:</div>
-                                                <ul>
-                                                    <li>Poetry writing</li>
-                                                    <li>Singing</li>
-                                                    <li>Doodling</li>
-                                                </ul>
-                                            </td>
-                                        </div>
-                                       
-                                    </tr>
-                                </table>
+                             </ul>
                             </td>
                             <td valign="top">
                                 <div class="one" style="width: 95%;">Extracurricular Activities:</div>
