--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          <tr>
              <td>
                 <div class="sidenav">
-                    <img src="/20170519_224038.jpg" alt="">  
+                    <img src="Portfolio/20170519_224038.jpg" alt="">  
                     <h2 class="name">&nbsp;&nbsp;&nbsp;&nbsp;Mounil Garg</h2>
                         <i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(BE- Computer Science Engineering)</i> <br> 
                     <div >
