--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <td valign="top">
                                 <div class="one" style="width: 95%;">Extracurricular Activities:</div>
                                 <ul>
-                                    <li>Participated in the Government MyGov "YUVA SCHEME".<br>(Result Awaited)</li>
+                                    <li>Participated in the Government MyGov<br> "YUVA SCHEME".(Result Awaited)</li>
                                     <li>Various POEMS published in "Times Of India" <br> newspaper.</li>
                                     <li>District-level Basketball player</li>
                                     <li>Won various inter-house debating, extempore <br> competitions</li>
