--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@
                                     <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:DockChip(website) </li>
                                     <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - present</li>
                                 </ul>
+                              <div class="one" >Projects</div>
+                                    <p>1)&nbsp;<b>Hostel Management System</b>:C++ project</p>
+                                    <u>Technologies used:</u> C++, Compiler
+                                    <p>2)&nbsp;<b>College Management System</b>:DBMS project</p>
+                                    <u>Technologies used:</u> MySQL
+                                    <p>3)&nbsp;<b>Medical Inventory</b>:Website</p>
+                                    <u>Technologies used:</u>HTML, CSS, JS, PHP, MySQL <br><br>
                                 <div class="one" >Courses/Certifications:</div>
                                 <ul>
                                     <li>HKCL certification in C Programming Language</li>
