--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     left: 0;
     background-color: hsl(0, 54%, 97%);
     overflow-x: hidden;
-    padding: 20px;
     border-right: 3px solid grey;
     }
 
      img{
         align-self: center;
-        top:-55px;
         padding-left: 140px;
         width: 35%;
         height: 160px;
@@ -122,7 +120,7 @@
                     </table><br>
                     <table>
                         <tr>
-                            <td>
+                            <td valign="top">
                                 <div class="one" >Experience:(Internships)</div>
                                 <p>1)&nbsp;<b>Organisation</b>:The Sparks Foundation </p>
                                 <ul>
@@ -136,13 +134,6 @@
                                     <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:DockChip(website) </li>
                                     <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - present</li>
                                 </ul>
-                              <div class="one" >Projects</div>
-                                    <p>1)&nbsp;<b>Hostel Management System</b>:C++ project</p>
-                                    <u>Technologies used:</u> C++, Compiler
-                                    <p>2)&nbsp;<b>College Management System</b>:DBMS project</p>
-                                    <u>Technologies used:</u> MySQL
-                                    <p>3)&nbsp;<b>Medical Inventory</b>:Website</p>
-                                    <u>Technologies used:</u>HTML, CSS, JS, PHP, MySQL <br><br>
                                 <div class="one" >Courses/Certifications:</div>
                                 <ul>
                                     <li>HKCL certification in C Programming Language</li>
@@ -157,8 +148,26 @@
                                     <li><b>Familiar with</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MySQL, Oracle, PHP</li>
                                     <li><b>Currently learning</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:JavaScript, Visual Studio Code</li>
                              </ul>
+                             <div class="three" >Strengths:</div>
+                                <ul>
+                                    <li>Dedicated to work</li>
+                                    <li>Keen in learning new things</li>
+                                    <li>Good communication skills</li>
+                                </ul>
+                                <div class="three" >Weaknesses:</div>
+                                <ul>
+                                    <li>Curious to know things better</li>
+                                    <li>Eager to achieve perfection</li>
+                                </ul>
                             </td>
                             <td valign="top">
+                             <div class="one" >Projects</div>
+                                    <p>1)&nbsp;<b>Hostel Management System</b>:C++ project</p>
+                                    <u>Technologies used:</u> C++, Compiler
+                                    <p>2)&nbsp;<b>College Management System</b>:DBMS project</p>
+                                    <u>Technologies used:</u> MySQL
+                                    <p>3)&nbsp;<b>Medical Inventory</b>:Website</p>
+                                    <u>Technologies used:</u>HTML, CSS, JS, PHP, MySQL <br><br>
                                 <div class="one" style="width: 95%;">Extracurricular Activities:</div>
                                 <ul>
                                     <li>Participated in the Government MyGov<br> "YUVA SCHEME".(Result Awaited)</li>
@@ -173,17 +182,7 @@
                                     <li>Felicitated by <u>MLA KALKA</u>  for extraordinary <br>academic  performance.</li>
                                     <li>Felicitated by <u>'Vice-Chancellor, PU, Chandigarh'</u> <br> for being  UT-Topper in class 12 boards.</li>
                                 </ul>
-                                <div class="three" >Strengths:</div>
-                                <ul>
-                                    <li>Dedicated to work</li>
-                                    <li>Keen in learning new things</li>
-                                    <li>Good communication skills</li>
-                                </ul>
-                                <div class="three" >Weaknesses:</div>
-                                <ul>
-                                    <li>Curious to know things better</li>
-                                    <li>Eager to achieve perfection</li>
-                                </ul>
+                                
                             </td>
                         </tr>
                     </table>
