--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     background-color: hsl(0, 54%, 97%);
-    overflow-x: hidden;
+    overflow: hidden;
     border-right: 3px solid grey;
     }
 
