--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <div class="one" >Technical skills::</div>
                                 <ul>
                                     <li><b>Engineering software</b> : C, C++, HTML5, CSS3, Bootstrap4</li>
-                                    <li><b>Other software</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MS Word, PowerPoint</li>
+                                    <li><b>Other software</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MS Word, PowerPoint, MS Project, Star UML</li>
                                     <li><b>Familiar with</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MySQL, Oracle, PHP</li>
                                     <li><b>Currently learning</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:JavaScript, Visual Studio Code</li>
                              </ul>
