--- a/index.html
+++ b/index.html
@@ -122,18 +122,19 @@
                         <tr>
                             <td valign="top">
                                 <div class="one" >Experience:(Internships)</div>
-                                <p>1)&nbsp;<b>Organisation</b>:The Sparks Foundation </p>
+                               <p>1)&nbsp;<b>Organisation</b>:Influencer Saga </p>
+                                <ul>
+                                    <li><b>Position</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Front end Development Intern </li>
+                                    <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:DockChip(website) </li>
+                                    <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - Aug'21</li>
+                                </ul>
+                                <p>2)&nbsp;<b>Organisation</b>:The Sparks Foundation </p>
                                 <ul>
                                     <li><b>Position</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Web Development Intern </li>
                                     <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Basic Banking System </li>
                                     <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - May'21(1 mon)</li>
                                 </ul>
-                                <p>2)&nbsp;<b>Organisation</b>:Influencer Saga </p>
-                                <ul>
-                                    <li><b>Position</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:Front end Development Intern </li>
-                                    <li><b>Project</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:DockChip(website) </li>
-                                    <li><b>Duration</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:May'21 - present</li>
-                                </ul>
+                                
                                 <div class="one" >Courses/Certifications:</div>
                                 <ul>
                                     <li>HKCL certification in C Programming Language</li>
@@ -145,7 +146,7 @@
                                 <ul>
                                     <li><b>Engineering software</b> : C, C++, HTML5, CSS3, Bootstrap4</li>
                                     <li><b>Other software</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MS Word, PowerPoint, MS Project, Star UML</li>
-                                    <li><b>Familiar with</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MySQL, Oracle, PHP</li>
+                                    <li><b>Familiar with</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: MySQL, Oracle, PHP, Figma</li>
                                     <li><b>Currently learning</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:JavaScript, Visual Studio Code</li>
                              </ul>
                              <div class="three" >Strengths:</div>
@@ -170,7 +171,7 @@
                                     <u>Technologies used:</u>HTML, CSS, JS, PHP, MySQL <br><br>
                                 <div class="one" style="width: 95%;">Extracurricular Activities:</div>
                                 <ul>
-                                    <li>Participated in the Government MyGov<br> "YUVA SCHEME".(Result Awaited)</li>
+                                    <li>Participated in the Government MyGov<br> "YUVA SCHEME".</li>
                                     <li>Various POEMS published in "Times Of India" <br> newspaper.</li>
                                     <li>District-level Basketball player</li>
                                     <li>Won various inter-house debating, extempore <br> competitions</li>
