--- a/index.html
+++ b/index.html
@@ -81,10 +81,11 @@
                     <div >
                         <h3 class="name">&nbsp;&nbsp;&nbsp;&nbsp;Contact</h3>
                         <ul>
+                            <li><u>Phone</u>&nbsp;&nbsp;&nbsp;: 9350197805</li><br>
                             <li><u>Email</u>&nbsp;&nbsp;&nbsp;&nbsp;: mounilgarg@gmail.com</li><br>
                             <li><u>Github</u>&nbsp;&nbsp;&nbsp;: https://github.com/mounilgarg </li><br>
                             <li><u>LinkedIn</u>: https://www.linkedin.com/in/mounil-garg-0161b5210/</li><br>
-                            <li><u>Blog</u>&nbsp;&nbsp;&nbsp;: https://thepistle.blogspot.com/ </li><br>
+                            <li><u>Blog</u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;: https://thepistle.blogspot.com/ </li><br>
                         </ul>
                     </div>
                 </div>
